test/version0.9.2/vsurecoding/globals.js
// All globals define here!!

// filesystem
var FS = "";

// console.log
var LOG = console.log;

// error
var ERROR = function(name, message){
};


